@@ -371,7 +371,7 @@ require([
                     end_time_timeTextBox.value.getMinutes(),
                     end_time_timeTextBox.value.getSeconds()
             );
-            
+
             console.debug('start_datetime_value :', start_datetime_value);
             console.debug('end_datetime_value   :', end_datetime_value);
 
